--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -8,6 +8,7 @@
     <meta name="author" content="{{ page.authors | array_to_sentence_string }}">
     <title>{{ page.title}}</title>
 
+    <link rel="shortcut icon" type="image/png" href="/img/pico-logo-transparent-48x48.png">
     <!-- Bootstrap -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/cover.css" rel="stylesheet">
