--- a/g/nso/style.css
+++ b/g/nso/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1),rgba(51, 51, 51, 1)), url(tags.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4),rgba(51, 51, 51, 1)), url(tags.jpg);
   height: 80%;
   background-position: center;
   background-repeat: no-repeat;
@@ -26,12 +26,12 @@ body {
   margin-top: 200px;
 }
 
-h1 {
+.hero-inner h1 {
   font-size: 7em;
   font-family: sans-serif;
 }
 
-h2 {
+.hero-inner h2 {
   margin-top: -17px;
   font-family: sans-serif;
   font-size: 1.7em;
@@ -39,32 +39,13 @@ h2 {
   font-weight: 400;
 }
 
-a {
+.hero-inner a {
   margin-top: 20px;
   font-size: 1.3em;
   font-family: sans-serif;
 }
 
-.btn {
-  display: inline-block;
-  width: 200px;
-  font-weight: bold;
-  padding: 10px;
-  color: #2591CD;
-  border: 4px solid #2591CD;
-  text-align: center;
-  outline: none;
-  text-decoration: none;
-  transition: background-color 0.2s ease-out, color: 0.2s ease-out;
-}
-
-a {
-  margin-top: 20px;
-  font-size: 1.3em;
-  font-family: sans-serif;
-}
-
-.btn {
+.hero-inner .btn {
   display: inline-block;
   width: 200px;
   font-weight: bold;
@@ -79,7 +60,7 @@ a {
   background-color: #333333;
 }
 
-.btn:hover,.btn:active {
+.hero-inner .btn:hover,.btn:active {
   background-color: #2591CD;
   color: black;
   transition: background-color 0.3s ease-in, color: 0.3s ease-in;
@@ -106,5 +87,20 @@ a {
 #safeandmine {
   margin-top: 20vh;
   height: 100vh;
+  background-color: white;
+  position: relative;
+}
+
+.safeandmine-inner {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  padding: 5px;
+  font-family: Arial, sans-serif;
+}
+
+.safeandmine-inner h1 {
+  font-size: 2em;
+  margin: 1em 0;
 }
 
